<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">The Word</string>
    <string name="info_general">The app shows The Word created by </string>
    <string name="source_code_prefix">Source code:</string>
    <string name="info_participate">If you want to participate in creating new content, please visit:</string>
    <string name="pref_screen_settings_title">Settings</string>
    <string name="pref_theme_title">Theme</string>
    <string-array name="pref_theme_themes_displayed">
        <item>Red/Teal</item>
        <item>Blue/Orange</item>
        <item>Grey/Cyan</item>
        <item>Green/Brown</item>
    </string-array>
    <string name="pref_design_title">Design</string>
    <string-array name="pref_design_options_displayed">
        <item>Bright</item>
        <item>Dark</item>
        <item>System Setting</item>
    </string-array>
    <string name="pref_language_title">Translation</string>
    <string name="pref_app_category_title">Application settings</string>
    <string name="pref_fontsize_title">Content Font Size</string>
    <string name="pref_shownotes_title">Show Notes</string>
    <string name="pref_widget_category_title">Widget Settings</string>
    <string name="pref_widget_showdate_title">Widget Show Date</string>
    <string name="pref_widget_centered_text_title">Widget Centered Text</string>
    <string name="pref_widget_backgroundcolor_title">Widget Background</string>
    <string-array name="pref_widget_backgroundcolor_colors_displayed">
        <item>None</item>
        <item>With Black Border</item>
        <item>White</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Dark Green</item>
        <item>Green</item>
        <item>Grey</item>
        <item>Light Blue</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>Transparent Container</item>
        <item>Black Container</item>
        <item>Blue Container</item>
        <item>Dark Green Container</item>
        <item>Green Container</item>
        <item>Grey Container</item>
        <item>Light Blue Container</item>
        <item>Pink Container</item>
        <item>Purple Container</item>
        <item>Red Container</item>
        <item>White Container</item>
        <item>Yellow Container</item>
    </string-array>
    <string name="pref_widget_fontcolor_title">Widget Font Color</string>
    <string-array name="pref_widget_fontcolor_colors_displayed">
        <item>White</item>
        <item>Grey</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Light Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Dark Green</item>
        <item>Purple</item>
        <item>Pink</item>
    </string-array>
    <string name="pref_widget_fontsize_title">Widget Font Size</string>
    <string name="notes_header">Notes:</string>
    <string name="nav_info">About</string>
    <string name="menu_date_pick">Choose Day</string>
    <string name="menu_share">Share</string>
    <string name="share_app">Great Android app: %1$s</string>
    <string name="nav_all_notes">All Notes</string>
    <string name="nav_settings">Settings</string>
    <string name="app_version">Version %1$s</string>
    <string name="notes_export_success">Export to %1$s/%2$s finished</string>
    <string name="notes_export_error">Error: Could not export successfully to %1$s/%2$s …</string>
    <string name="btn_export_export_now">Export now</string>
    <string name="no_notes">You don\'t have any notes yet.\nYou can add notes every day below the displayed text.</string>
    <string name="no_notes_for_filter">No notes found that contain the text \'%1$s\'</string>
    <string name="edit_note">edit</string>
    <string name="snackbar_retry">Retry</string>
    <string name="cd_the_word_no_content">No content for this date</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="view_pager_loading_content">Loading data for translation \'%1$s\'</string>
    <string name="bible_no_bibles">Can\'t find any translations</string>
    <string name="bible_download_bibles">Refresh translations</string>
    <string name="bible_loading_bibles">Refreshing translations…</string>
    <string name="no_content">No content found for this date and translation</string>
    <string name="no_content_download">Try to download</string>
    <string name="bible_item_language">[%1$s]</string>
    <string name="bible_please_choose">Please choose a translation.</string>
    <string name="bible_please_choose_subhead">You can always change the translation later in the settings.</string>
    <string name="cd_bible_item">bible</string>
    <string name="preferences_title">Settings</string>
    <string name="edit_note_title">Edit Note</string>
    <string name="menu_edit_note_save">Save</string>
    <string name="cd_main_nav_image">App icon</string>
    <string name="note_list_title">All Notes</string>
    <string name="bible_activity_title">@string/app_name</string>
    <string name="main_activity_title">@string/app_name</string>
    <string name="the_word_change_translation">Change Translation</string>
    <string name="cd_no_notes">no notes</string>
    <string name="share_dialog_title">Share</string>
    <string name="share_dialog_ok">Share</string>
    <string name="share_dialog_input_hint">Text to share</string>
    <string name="share_dialog_chooser_title">Share</string>
    <string name="pref_display_category_title">Display Settings</string>
    <string name="pref_app_show_daily_notification_title">Daily Notification</string>
    <string name="can_not_write_to_sdcard">Can not write to sd card</string>
    <string name="note_export_subhead">Export all notes to the sdcard</string>
    <string name="note_export_title">Export Notes</string>
    <string name="notes_export_no_notes">There are no notes to export</string>
    <string name="cd_widget_background">Widget background</string>
    <string name="edit_note_hint">Note for that day</string>
    <string name="edit_note_store_error">Error while trying to store this note…</string>
    <string name="edit_note_load_error">Error while loading note…</string>
    <string name="edit_note_load_error_retry">Retry</string>
    <string name="menu_edit_note_share">Share</string>
    <string name="note_details_title">Note Details</string>
    <string name="menu_note_details_share">Share</string>
    <string name="about_title">About</string>
    <string name="about_share">Share</string>
    <string name="developer_prefix">Android Developer:</string>
    <string name="info_prefix">Info:</string>
    <string name="share_app_title">Share app</string>
    <string name="pref_app_show_daily_notification_summary_off">No Notifications</string>
    <string name="pref_app_show_daily_notification_summary_on">Display The Word as a notification every day</string>
    <string name="pref_shownotes_summary_off">Notes hidden</string>
    <string name="pref_shownotes_summary_on">Notes visible below the bible verses</string>
    <string name="fontsize_dialog_title">Set font size</string>
    <string name="fontsize_dialog_ok">Done</string>
    <string name="menu_font_size">Change font size</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="action_search">Search</string>
    <string name="note_list_export">Export notes</string>
    <string name="menu_note_details_delete">Delete</string>
    <string name="note_details_error_deleting_note">Could not delete this note…</string>
    <string name="confirm_delete_dialog_title">Really delete?</string>
    <string name="confirm_delete_dialog_ok">Delete</string>
    <string name="menu_note_details_edit">Edit</string>
    <string name="note_details_error_reload_note">Could not reload this note…</string>
    <string name="note_details_note_header">Notes:</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
