<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_note_input_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_note_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_note_hint"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/edit_note_load_error"
        style="@style/MaximumContentWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/cd_the_word_no_content"
            app:srcCompat="@drawable/ic_error_outline_black_24dp" />

        <TextView
            style="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/edit_note_load_error" />

        <Button
            android:id="@+id/edit_note_load_error_retry"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/edit_note_load_error_retry" />

    </LinearLayout>

    <de.reiss.bible2net.theword2.util.view.LoadingProgressBar
        android:id="@+id/edit_note_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:visibility="gone" />

</FrameLayout>